# ase_tracegen

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/examples/: config_4repo_full.yaml  config_4repo_full_fixed.yaml  config_ablation_a.yaml  config_ablation_b.yaml  config_ablation_c.yaml  config_ablation_d.yaml  config_balanced.yaml  config_full_run.yaml
data/baselines/: bugpilot_featadd_summary.json  llm_judge_summary.json  same_target_flash_summary.json  same_target_gpt54_summary.json  swesmith_rewrite_summary.json
data/evaluation/: sweagent_eval_summary.json
data/examples/: showcase.json  showcase_5.json
data/seed_instances/: balanced_200.json  balanced_200_ids.json  sample_10.json
data/synthesized_bugs/: chain_guided_ps.json  problem_statements_levels.json  quality_metrics.json  sample_20.json  valid_295_summary.json
scripts/: build_graphs.py  compare_stage0_vs_locagent.py  monitor_opus_run.py  prepare_full_run.py  prepare_multi_repo.py  read_graph_stats.py  test_stage0_llm.py  test_stage0_non_django.py  test_stage2_vector_retrieval.py  test_validation.py  validate_only.py
scripts/quality/: analyze_chain_guided_ps.py  compute_metrics.py  generate_figures.py  generate_ps.py  info_theory_test.py  ps_template_mutation.py  (+2 more)
src/: __init__.py
tools/: GPU_EMBEDDING_README.md  convert_loc_to_swebench.py  convert_to_swebench.py  embedding_generator_dashscope.py  embedding_generator_gpu.py  gpu_env_setup.sh  salvage_revalidate_stage3.py  stream_validate.py  token_stats.py  watch_salvage_progress.py
(+64 files in other folders)
