[project]
name = "tracegen"
version = "0.1.0"
description = "TraceGen: 基于图分析的代码缺陷动态评测框架"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.20.0",
    "networkx>=3.0",
    "GitPython>=3.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tenacity>=8.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
